# logbook_rs

./: .gitignore  Cargo.toml  README.md
db/migrations/: 20240120185914_create_logs_table.sql
src/: commands.rs  data.rs  logbook.rs  main.rs
src/commands/: mod.rs
src/data/: logs.rs  mod.rs
src/logbook/: mod.rs
