[package]
name = "logbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.4.18", features = ["derive"] }
cli-table = "0.4.7"
dotenv = "0.15.0"
inquire = { version = "0.6.2", features = ["date"] }
itertools = "0.12.0"
regex = "1.10.2"
sqlx = { version = "0.7.3", features = ["runtime-async-std", "sqlite"] }
tokio = { version = "1.35.1", features = ["full"] }
